modules/cstl-admin/grunt/src/less/main.less
/* ... */
.filter_active{
    background-color: #5BC0DE;
    color: #FFFFFF !important;
    text-decoration: none;
}

h3.popover-title {
    font-size: 14px;
    font-weight: normal;
}

.quick-search-panel{
  max-width:300px;
}
/* fix bug with modal issue */
.datepicker{
  z-index: 1060 !important;
}
body.modal-open{
  overflow: inherit !important;
  margin-right: 0;
}
.modal{
  overflow: auto !important;
}

/* Registration */
.profile-picture{
  background-image: linear-gradient(to bottom,#246f98 0,#297dab 46px);
  padding: 20px;
  margin-left: -20px;
  margin-right: -20px;
  margin-bottom: 30px;
  margin-top: -20px;
  text-align:center;
  >label{
    font-size:16px;
    color: white;
  }
  >img{
    width:100px;
    height :100px;
    margin-left:30px;
    margin-right:20px;
    border-radius:5px;
  }
}

.registration-organization{
  padding-top: 25px;
  border-top: 1px solid #ededed;
}

.animate.ng-enter,
.animate.ng-leave {
  -webkit-transition: 500ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
  -moz-transition: 500ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
  -ms-transition: 500ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
  -o-transition: 500ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
  transition: 500ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
  position: relative;
  display: block;
  overflow: hidden;
}
.animate.ng-leave.animate.ng-leave-active,
.animate.ng-enter {
  opacity: 0;
  height: 0px;
}
.animate.ng-enter.ng-enter-active,
.animate.ng-leave {
  opacity: 1;
  height: 50px;
}

//Disclaimer
.disclaimer{
  background:url('../img/constellation-about.svg') no-repeat center;
  background-size:150%;
  margin-top:50px;
  margin-bottom:20px;
  .disclaimer-text{
    font-size: 15px;
    line-height: 26px;
  }
  h4{
    font-size: 19px;
  }
}

.top.edit-mapcontext-modale{
  width: 200px;
  overflow: hidden;
  text-overflow: ellipsis;
}

/* -------------- Responsive -------------- */

@media screen and (max-width: @screen-xs-max){
  body {
    padding-bottom: 95px;
  }
  /* accueil */
  .accueil_logo img{
    width:100%;
    max-width:400px;
  }
  .new-service-form-label{
    margin-top:7px;
  }
  .navbar-toggle .icon-bar {
    background-color: #fff;
  }
  /* dashboard */
  .item-title{
    width: 250px;
  }
  .item-title.title-sensorSystem{
    width: 200px;
  }
  .dashboard .item-list .item .top .item-title, .dashboard .item-list .item .top .text-right {
    font-size: 12px;
  }
  /* service */
  .service-button{
    margin-bottom: 10px;
  }
  .dashboard .searchbox {
    width: 130px;
  }
}
/* ... */

